Fix issue of footer scrolling text not visible on mobile

--- a/assets/scss/_responsive.scss
+++ b/assets/scss/_responsive.scss
@@ -1,5 +1,5 @@
 @media screen and (min-width: 768px) {
-	html {
+	body {
 		min-height: 100%;
 	}
 	.header {
